components/konflux-ui/production/kflux-prd-rh02/proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: proxy
  name: proxy
  annotations:
    ignore-check.kube-linter.io/no-anti-affinity: "Using topologySpreadConstraints"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: proxy
    spec:
      serviceAccountName: proxy
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: proxy
      containers:
      - image: registry.access.redhat.com/ubi9/nginx-124@sha256:b924363ff07ee0f8fd4f680497da774ac0721722a119665998ff5b2111098ad1
        name: nginx
        command: 
          - nginx
          - "-g"
          - "daemon off;"
          - -c
          - /etc/nginx/nginx.conf
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 9443
            scheme: HTTPS
          initialDelaySeconds: 30
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 9443
            scheme: HTTPS
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        - containerPort: 9443
          name: web-tls
          protocol: TCP
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 30m
            memory: 128Mi
        volumeMounts:
          - mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
            name: proxy
            readOnly: true
          - name: logs
            mountPath: /var/log/nginx
          - name: nginx-tmp
            mountPath: /var/lib/nginx/tmp
          - name: run
            mountPath: /run
          - name: serving-cert
            mountPath: /mnt
          - name: nginx-generated-config
            mountPath: /mnt/nginx-generated-config
          - name: static-content
            mountPath: /opt/app-root/src/static-content
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001
      - image: quay.io/konflux-ci/workspace-manager@sha256:6b7bfcf197cbff2ae9b1d84abd73636ce5733921524fb550438d8a8143a536b5
        name: workspace-manager
        ports:
          - containerPort: 5000
            name: web
            protocol: TCP
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 30m
            memory: 128Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001
      - image: quay.io/oauth2-proxy/oauth2-proxy@sha256:3da33b9670c67bd782277f99acadf7026f75b9507bfba2088eb2d497266ef7fc
        name: oauth2-proxy
        args:
          - tba
        ports:
          - containerPort: 6000
            name: oauth2-proxy
            protocol: TCP
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 30m
            memory: 128Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001
      - image: quay.io/gbenhaim0/mccutchen/go-httpbin
        name: httpbin
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 30m
            memory: 128Mi      
      volumes:
        - configMap:
            defaultMode: 420
            name: proxy
            items:
              - key: nginx.conf
                path: nginx.conf 
          name: proxy
        - name: logs
          emptyDir: {}
        - name: nginx-tmp
          emptyDir: {}
        - name: run
          emptyDir: {}
        - name: serving-cert
          secret:
            secretName: serving-cert
        - name: nginx-generated-config
          emptyDir: {}
        - name: api-token
          secret:
            secretName: proxy
            optional: true
        - name: static-content
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: proxy
  name: proxy
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: web
      port: 8888
      protocol: TCP
      targetPort: web
    - name: web-tls
      port: 9443
      protocol: TCP
      targetPort: web-tls
    - name: oauth2-proxy
      port: 6000
      targetPort: oauth2-proxy
  selector:
    app: proxy
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: konflux
spec:
  host: tba
  path: /
  port:
    targetPort: web-tls
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: proxy
    weight: 100
